Modernize Debian packaging system
- Replace custom build_deb.sh with standard dpkg-buildpackage workflow
- Add proper debian/ directory with standard packaging files
- Add Makefile for proper build system integration
- Remove old DEBIAN/ directory and build script
- Update .gitignore for Debian build artifacts
- Version is now automatically read from VERSION file during build

Now you can simply use: dpkg-buildpackage -us -uc -b

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-deb_build/
+# Debian packaging build artifacts
+debian/debian-nvidia-installer/
+debian/.debhelper/
+debian/debhelper-build-stamp
+debian/files
+debian/*.debhelper.log
+debian/*.substvars
+
+# Build outputs
+*.deb
+*.changes
+*.buildinfo
+
+# Temporary files
+*~
+.#*
+\#*#
