Added DE translation to desktop file

--- a/usr/share/applications/debian-nvidia-installer.desktop
+++ b/usr/share/applications/debian-nvidia-installer.desktop
@@ -2,10 +2,12 @@
 Name=Debian Nvidia Installer
 Name[pt_BR]=Instalador Nvidia para Debian
 Name[en_US]=Debian Nvidia Installer
+Name[de_DE]=GuideOS Nvidia Installer
 
 Comment=Nvidia driver manager for Debian
 Comment[pt_BR]=Gerenciador de drivers da Nvidia para Debian
 Comment[en_US]=Nvidia driver manager for Debian
+Comment[de_DE]=Tool zum verwalten des NVIDIA-Treibers
 
 Exec=pkexec /usr/bin/debian-nvidia-installer
 Icon=debian-nvidia-installer
